# reservation

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  justfile  makefile
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PR_TEMPLATE/: pull_request.md
.github/workflows/: build.yml
abi/: Cargo.toml  build.rs
abi/protos/: reservation.proto
abi/src/: lib.rs  utils.rs
abi/src/error/: mod.rs
abi/src/pb/: mod.rs  reservation.rs
abi/src/types/: mod.rs  reservation.rs
core/: Cargo.toml
core/src/: error.rs  lib.rs  manager.rs
migrations/: 20230815133419_init.down.sql  20230815133419_init.up.sql  20230815135821_reservation.down.sql  20230815135821_reservation.up.sql  20230821124234_reservation_trigger.down.sql  20230821124234_reservation_trigger.up.sql
rfcs/: 0001-reservation.md
rfcs/template/: 0000-template.md
