[package]
name = "abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
prost = "0.11.9"
prost-types = "0.11.9"
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
thiserror = "1.0.47"
tonic = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"
